.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/AHPRA_Number__c.field-meta.xml
<CustomField>
    <fullName>AHPRA_Number__c</fullName>
    <inlineHelpText>AHPRA number, otherwise leave blank if not relevant</inlineHelpText>
    <label>AHPRA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>