.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fixed Assets</relationshipLabel>
    <relationshipName>Fixed_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>