.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Fixed Assets</relationshipLabel>
    <relationshipName>Fixed_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>