.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/Branch_Email__c.field-meta.xml
<CustomField>
    <fullName>Branch_Email__c</fullName>
    <inlineHelpText>Email address of branch for back of ID badge</inlineHelpText>
    <label>Branch Email</label>
    <type>Email</type>
</CustomField>