.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/Branch_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Phone_Number__c</fullName>
    <inlineHelpText>To appear on back of ID badge</inlineHelpText>
    <label>Branch Phone Number</label>
    <type>Phone</type>
</CustomField>