.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <inlineHelpText>Select which brand for appropriate logo for ID badge</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Extra Staff</fullName>
            </value>
            <value>
                <fullName>R&amp;R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>