.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/ID_Badge__c.field-meta.xml
<CustomField>
    <fullName>ID_Badge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID Badge Included</label>
    <type>Checkbox</type>
</CustomField>