.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <inlineHelpText>Position title to appear on the front of the ID badge</inlineHelpText>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>