.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <inlineHelpText>Preferred name to appear on the front of the badge</inlineHelpText>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>