.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <inlineHelpText>Please select the appropriate size based on your uniform type:

**For Scrub Shirt:
- Women&apos;s: Select size 6, 8, 10, 12, 14, or 16
- Unisex: Select size XS, S, M, L, XL, or 2XL

**For Polo Shirt:
- Women&apos;s: Select size 6, 8, 10, 12, 14, 16, 22, or 24
- Unisex: Select size S, M, L, XL, 2XL, or 3XL

**For Scrub Pants (both Regular and Long Length):
Select size XS, S, M, L, XL, 2XL, or 3XL</inlineHelpText>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>2XL</fullName>
            </value>
            <value>
                <fullName>3XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>