.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Uniform__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Womens</fullName>
            </value>
            <value>
                <fullName>Mens</fullName>
            </value>
            <value>
                <fullName>Unisex</fullName>
            </value>
            <value>
                <fullName>Reg Length</fullName>
            </value>
            <value>
                <fullName>Long Length</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>