.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/fields/Uniform__c.field-meta.xml
<CustomField>
    <fullName>Uniform__c</fullName>
    <label>Uniform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scrub Shirt</fullName>
            </value>
            <value>
                <fullName>Polo Shirt</fullName>
            </value>
            <value>
                <fullName>Scrub Pants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>