.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/recordTypes/ID_Badge.recordType-meta.xml
<RecordType>
    <fullName>ID_Badge</fullName>
    <active>true</active>
    <label>ID Badge</label>
</RecordType>