.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Fixed_Assets__c/recordTypes/Uniform.recordType-meta.xml
<RecordType>
    <fullName>Uniform</fullName>
    <active>true</active>
    <label>Uniform</label>
</RecordType>